# covid-odin

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs.yml  installation.yml
changelog/: index.html
common/: index.html
contributing/: contributing.md  index.html
covid_odin/: __init__.py  index.html
docs/: common.md  covid_odin.md  index.md  installation.md  usage.md
examples/intro/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_covid_odin.py
usage/: index.html
